--- a/game1.html
+++ b/game1.html
@@ -4,18 +4,50 @@
 <meta charset="utf-8">
 <title>游戏界面1</title>
 	 <style type="text/css">
-		 body{background-image:url(src/t13.jpg);background-size:100% 113%; background-repeat:no-repeat;}
+		body{background-image:url(src/t20.jpg); background-repeat:no-repeat;background-size:1007px 600px;background-position:center top; }
+		 #Z{width:1007px;height: 600px;margin: 0 auto;}
+		 #A2{width:107px;height:560px;border-radius:10px;margin-top:578px;margin-left:450px;}
 
-		 #A2{border:solid 1px black;width:9%;height:585px;margin-top:45px;margin-left:150px;border-radius:10px;}
-		 #b3{margin-left: 25px;margin-top:-20px;}
-
+		 #b3{margin-left:15px;margin-top:-25px;}
+		 
+		 #G1{width:480px;height:280px;margin-top:-1080px;margin-left:100px;}
+		 #g1{text-decoration: none;color:black;}
+		 #g11{font-size:60px;font-family:STCaiyun;width:70px;height:70px;margin-top:100px;margin-left:30px;}
+		 #g12{float:left;font-size:60px;font-family:STCaiyun;width:70px;height:60px;margin-top:-170px;margin-left:180px;}
+		 #g13{float:left;font-size:60px;font-family:STCaiyun;width:70px;height:70px;margin-top:-85px;margin-left:360px;}
+		 #g14{font-size:50px;font-family:STCaiyun;width:150px;height:60px;margin-top:30px;margin-left:165px;}
+		 
+		 #G2{border-radius:10px;border:solid 1px black;width:280px;height:260px;margin-top:-390px;margin-left:650px;float:left;}
+		 #G3{border-radius:10px;border:solid 1px black;width:500px;height:180px;margin-top:-60px;margin-left:110px;}
+		 #G4{width:250px;height:60px;margin-top:-175px;margin-left:710px;float:left;}
+		 #g4{text-decoration: none;color:black;}
+		 #g41{font-size:35px;font-family:STCaiyun;}
 </style>
 
 	
 </head>
 <body>
+	<div id="Z">
 <div id="A2">
-	<p><a href="index.html"><input type="button" value="返回首页"  id="b3"></a></p>
-</div>	
+	<p><a href="index.html"><input type="button" value="返回首页"  id="b3"></a></p>	
+</div>
+<div id="G1">
+	<div id="g11"><a href="game2.html" id="g1">试</a></div>
+	<div id="g12"><a href="game2.html" id="g1">试</a></div>
+	<div id="g13"><a href="game2.html" id="g1">看</a></div>
+	<div id="g14"><a href="game2.html" id="g1">大百科</a></div>
+</div>
+<div id="G2">
+	<p id="g21" align="center">《试试看大百科游戏介绍》<br></p>
+	<p>  您好！欢迎来到闯关冲刺试试看大百科游戏。<br><br>点击左侧“大百科”，进入野生动物大百科知识竞猜，来测试下你的野生动物保护知识储备吧~</p>
+</div>
+<div id="G3">
+	<p id="g31" align="center">《动物“拼多多”游戏介绍》<br></p>
+	<p>  您好！欢迎来到闯关冲刺动物拼多多游戏。<br><br>点击右侧“动物拼多多”，进入小动物拼图游戏，放松下吧~</p>
+</div>
+<div id="G4">
+	<p id="g41" align="center"><a href="game3.html" id="g4">动物"拼多多"</a></p>
+</div>
+	</div>
 </body>
 </html>
