--- a/index.html
+++ b/index.html
@@ -4,72 +4,75 @@
 <meta charset="utf-8">
 <title>浙江重点珍稀濒危野生动物交互式课件首页</title>
 	 <style type="text/css">
-		 body{background-image:url(src/t14.jpg);background-size:100% 113%; background-repeat:no-repeat;}
-		 #container{border:solid 1px black;margin-top:-552px;margin-left:295px;float:left;border-radius:15px;}
-		 #container2{border:solid 1px black;margin-top:-552px;margin-left:635px;float:left;border-radius:15px;}
-		 #container3{border:solid 1px black;margin-top:-552px;margin-left:970px;float:left;border-radius:15px;}
+		 
+		 body{background-image:url(src/t14.jpg); background-repeat:no-repeat;background-size:1007px 600px;background-position:center top; }
+		 #Z{width:1007px;height: 600px;margin: 0 auto;}
+		 
+		 #container{border:solid 1px black;margin-top:-542px;margin-left:245px;float:left;border-radius:15px;}
+		 #container2{border:solid 1px black;margin-top:-542px;margin-left:500px;float:left;border-radius:15px;}
+		 #container3{border:solid 1px black;margin-top:-542px;margin-left:755px;float:left;border-radius:15px;}
 		     #a1{margin-top:20px;font-size:20px;font-family:仿宋;font-weight:bold;}
-		 #A2{border:solid 1px black;width:9%;height:585px;margin-top:45px;margin-left:150px;border-radius:10px;}
-		     #a2{width:90%;text-align:center;border:solid 1px black;margin-left:5px;margin-top:-15px;alpha:1;font-weight:bold;}
-		         #a21{height:27px;border:solid 1px black;}#a22{height:27px;border:solid 1px black;}
-		         #a23{height:27px;border:solid 1px black;}#a24{height:27px;border:solid 1px black;}
-		         #a25{height:27px;border:solid 1px black;}#a26{height:27px;border:solid 1px black;}
-		         #a27{height:27px;border:solid 1px black;}#a28{height:27px;border:solid 1px black;}
-		         #a29{height:27px;border:solid 1px black;}#a210{height:27px;border:solid 1px black;}
-		         #a211{height:27px;border:solid 1px black;}#a212{height:27px;border:solid 1px black;}
-		         #a213{height:27px;border:solid 1px black;}#a214{height:27px;border:solid 1px black;}
-		         #a215{height:27px;border:solid 1px black;}#a216{height:27px;border:solid 1px black;}
+		 #A2{border:solid 1px black;width:107px;height:540px;border-radius:10px;margin-top:30px;margin-left:120px;}
+		     #a2{width:96px;text-align:center;border:solid 1px black;margin-left:5px;margin-top:-15px;alpha:1;font-weight:bold;}
+		         #a21{height:20px;border:solid 1px black;}#a22{height:27px;border:solid 1px black;}
+		         #a23{height:20px;border:solid 1px black;}#a24{height:27px;border:solid 1px black;}
+		         #a25{height:20px;border:solid 1px black;}#a26{height:27px;border:solid 1px black;}
+		         #a27{height:20px;border:solid 1px black;}#a28{height:27px;border:solid 1px black;}
+		         #a29{height:20px;border:solid 1px black;}#a210{height:27px;border:solid 1px black;}
+		         #a211{height:20px;border:solid 1px black;}#a212{height:27px;border:solid 1px black;}
+		         #a213{height:20px;border:solid 1px black;}#a214{height:27px;border:solid 1px black;}
+		         #a215{height:20px;border:solid 1px black;}#a216{height:20px;border:solid 1px black;}
 		 #b1{text-decoration: none;color:black;}	
 		 #b2{text-align:center;font-weight:bold;}
-		 #b3{width:66px;height:66px;border-radius:50%;border:none;margin-left:300px;margin-top:-260px;float:left;background-color:#B9F7CD;font-weight:bold;}
-		 #b4{width:36px;height:36px;border-radius:50%;border:none;margin-left:273px;margin-top:-246px;float:left;background-color:#B9F7CD;font-weight:bold;}
+		 #b3{width:66px;height:66px;border-radius:50%;border:none;margin-left:260px;margin-top:-290px;float:left;background-color:#B9F7CD;font-weight:bold;}
+		 #b4{width:36px;height:36px;border-radius:50%;border:none;margin-left:225px;margin-top:-276px;float:left;background-color:#B9F7CD;font-weight:bold;}
  #container {
-	width: 280px;
+	width: 200px;
 	height: 200px;
 	overflow: hidden;
 }
  
 #photo {
-	width: 1120px;
+	width: 800px;
 	animation: switch 4s ease-out infinite;
 }
  
 #photo > img {
 	float: left;
-	width: 280px;
+	width: 200px;
 	height: 200px;
 }
  
  #container2 {
-	width: 280px;
+	width: 200px;
 	height: 200px;
 	overflow: hidden;
 }
  
 #photo2 {
-	width: 1120px;
+	width: 800px;
 	animation: switch 4s ease-out infinite;
 }
  
 #photo2 > img {
 	float: left;
-	width: 280px;
+	width: 200px;
 	height: 200px;
 } 
  #container3 {
-	width: 280px;
+	width: 200px;
 	height: 200px;
 	overflow: hidden;
 }
  
 #photo3 {
-	width: 1120px;
+	width: 800px;
 	animation: switch 4s ease-out infinite;
 }
  
 #photo3 > img {
 	float: left;
-	width: 280px;
+	width: 200px;
 	height: 200px;
 }		 
 		 
@@ -78,13 +81,13 @@
 		margin-left: 0;
 	}
 	26%, 49% {
-		margin-left: -280px;
+		margin-left: -200px;
 	}
 	51%, 74% {
-		margin-left: -560px;
+		margin-left: -400px;
 	}
 	76%,100%{
-		margin-left:-840px;
+		margin-left:-600px;
 	}	
 }
 </style>
@@ -92,6 +95,7 @@
 	
 </head>
 <body>
+	<div id="Z">
 <div id="A2">
 	<p id="b2">点点"看"👇</p>
 	<table id="a2" background="">
@@ -141,5 +145,6 @@
 </div>
 <a href="game1.html"><input type="button" value="👉"  id="b4"></a>
 <a href="game1.html"><input type="button" value="闯关冲刺"  id="b3"></a>
+		</div>
 </body>
 </html>
