--- a/page10.html
+++ b/page10.html
@@ -4,33 +4,35 @@
 <meta charset="utf-8">
 <title>镇海棘螈</title>
 	 <style type="text/css">
-		 body{background-image:url(src/t15.jpg);background-size:100% 113%; background-repeat:no-repeat;}
-
-		 #A2{border:solid 1px black;width:9%;height:585px;margin-top:45px;margin-left:150px;border-radius:10px;}
-		     #a2{width:90%;text-align:center;border:solid 1px black;margin-left:5px;margin-top:-10px;alpha:1;font-weight:bold;}
-		         #a21{height:27px;border:solid 1px black;}#a22{height:27px;border:solid 1px black;}
-		         #a23{height:27px;border:solid 1px black;}#a24{height:27px;border:solid 1px black;}
-		         #a25{height:27px;border:solid 1px black;}#a26{height:27px;border:solid 1px black;}
-		         #a27{height:27px;border:solid 1px black;}#a28{height:27px;border:solid 1px black;}
-		         #a29{height:27px;border:solid 1px black;}#a210{height:27px;border:solid 1px black;}
-		         #a211{height:27px;border:solid 1px black;}#a212{height:27px;border:solid 1px black;}
-		         #a213{height:27px;border:solid 1px black;}#a214{height:27px;border:solid 1px black;}
-		         #a215{height:27px;border:solid 1px black;}#a216{height:27px;border:solid 1px black;}
+		  body{background-image:url(src/t15.jpg);background-size:1007px 600px; background-repeat:no-repeat;background-size:1007px 600px;background-position:center top;}
+  
+		 #Z{width:1007px;height: 600px;margin: 0 auto;}
+		 #A2{border:solid 1px black;width:107px;height:560px;border-radius:10px;margin-top:20px;margin-left:110px;}
+		     #a2{width:96px;text-align:center;border:solid 1px black;margin-left:5px;margin-top:-10px;alpha:1;font-weight:bold;}
+		         #a21{height:20px;border:solid 1px black;}#a22{height:20px;border:solid 1px black;}
+		         #a23{height:20px;border:solid 1px black;}#a24{height:27px;border:solid 1px black;}
+		         #a25{height:20px;border:solid 1px black;}#a26{height:27px;border:solid 1px black;}
+		         #a27{height:20px;border:solid 1px black;}#a28{height:27px;border:solid 1px black;}
+		         #a29{height:20px;border:solid 1px black;}#a210{height:27px;border:solid 1px black;}
+		         #a211{height:20px;border:solid 1px black;}#a212{height:27px;border:solid 1px black;}
+		         #a213{height:20px;border:solid 1px black;}#a214{height:27px;border:solid 1px black;}
+		         #a215{height:20px;border:solid 1px black;}#a216{height:20px;border:solid 1px black;}
 		 #b1{text-decoration: none;color:black;}
-		 #b3{margin-left: 25px;margin-top:-20px;}
+		 #b3{margin-left:15px;margin-top:-25px;}
 
-		 #A1{float:left;width:49%;height:310px;margin-top:-460px;margin-left:510px;}
-		     #a11{width:70%;height:310px;margin-left:80px;}
+		 #A1{float:left;width:490px;height:250px;margin-top:-440px;margin-left:440px;}
+		     #a11{width:360px;height:250px;}
 		         
 		 
-		 #A3{float:left;border:solid 1px black;width:75%;height:135px;margin-top:-142px;margin-left:275px;border-radius:10px;}
-		     #a31{border:solid 1px black;width:75%;height:135px;border-radius:10px;}
-		     #a32{float:left;border:solid 1px black;width:24%;height:123px;margin-left:755px;margin-top:-130px;}
+		 #A3{float:left;border:solid 1px black;width:757px;height:140px;margin-top:-142px;margin-left:220px;border-radius:10px;}
+		     #a31{border:solid 1px black;width:600px;height:135px;border-radius:10px;font-size: 15px;}
+		     #a32{float:left;border:solid 1px black;width:145px;height:123px;margin-left:605px;margin-top:-130px;}
 </style>
 
 	
 </head>
 <body>
+	<div id="Z">
 <div id="A2">
 	<p><a href="index.html"><input type="button" value="返回首页"  id="b3"></a></p>
 	<table id="a2" background="">
@@ -59,9 +61,10 @@
 <div id="A3">
 	<div id="a31">
 		<p>镇海棘螈 浙江省特有种 国家二级保护动物 “极危”等级</p>
-		<p>镇海棘螈是蝾螈科中典型孓遗类群，现存2种，分别分布在我国镇海和日本琉球群岛。镇海棘螈于1932年被首次发现于浙江镇海县城湾。镇海棘螈行动迟缓，迁徙能力很弱，主要分布在北仑九峰山瑞岩景区内，总分布面积约3000公顷。该物种野外种群数量极其稀少，据研究　90年代仅50尾。后浙江开展了一系列保护工作，先后放归了800尾人工繁育的幼螈。</p>
+		<p>镇海棘螈是蝾螈科中典型孓遗类群，现存2种，分别分布在我国镇海和日本琉球群岛。镇海棘螈于1932年被首次发现于浙江镇海县城湾。镇海棘螈行动迟缓，迁徙能力很弱，主要分布在北仑九峰山瑞岩景区内，总分布面积约3000公顷。该物种野外种群数量极其稀少，据研究90年代仅50尾。后浙江开展了一系列保护工作，先后放归了800尾人工繁育的幼螈。</p>
 	</div>
 	<div id="a32"><img src="src/t92.jpg" width="100%" height="100%" align="center"></div>
 </div>
+		</div>
 </body>
 </html>
