--- a/page1.html
+++ b/page1.html
@@ -4,33 +4,35 @@
 <meta charset="utf-8">
 <title>朱鹮</title>
 	 <style type="text/css">
-		 body{background-image:url(src/t15.jpg);background-size:100% 113%; background-repeat:no-repeat;}
-
-		 #A2{border:solid 1px black;width:9%;height:585px;margin-top:45px;margin-left:150px;border-radius:10px;}
-		     #a2{width:90%;text-align:center;border:solid 1px black;margin-left:5px;margin-top:-10px;alpha:1;font-weight:bold;}
-		         #a21{height:27px;border:solid 1px black;}#a22{height:27px;border:solid 1px black;}
-		         #a23{height:27px;border:solid 1px black;}#a24{height:27px;border:solid 1px black;}
-		         #a25{height:27px;border:solid 1px black;}#a26{height:27px;border:solid 1px black;}
-		         #a27{height:27px;border:solid 1px black;}#a28{height:27px;border:solid 1px black;}
-		         #a29{height:27px;border:solid 1px black;}#a210{height:27px;border:solid 1px black;}
-		         #a211{height:27px;border:solid 1px black;}#a212{height:27px;border:solid 1px black;}
-		         #a213{height:27px;border:solid 1px black;}#a214{height:27px;border:solid 1px black;}
-		         #a215{height:27px;border:solid 1px black;}#a216{height:27px;border:solid 1px black;}
+		 body{background-image:url(src/t15.jpg);background-size:1007px 600px; background-repeat:no-repeat;background-size:1007px 600px;background-position:center top;}
+  
+		 #Z{width:1007px;height: 600px;margin: 0 auto;}
+		 #A2{border:solid 1px black;width:107px;height:560px;border-radius:10px;margin-top:20px;margin-left:110px;}
+		     #a2{width:96px;text-align:center;border:solid 1px black;margin-left:5px;margin-top:-10px;alpha:1;font-weight:bold;}
+		         #a21{height:20px;border:solid 1px black;}#a22{height:20px;border:solid 1px black;}
+		         #a23{height:20px;border:solid 1px black;}#a24{height:27px;border:solid 1px black;}
+		         #a25{height:20px;border:solid 1px black;}#a26{height:27px;border:solid 1px black;}
+		         #a27{height:20px;border:solid 1px black;}#a28{height:27px;border:solid 1px black;}
+		         #a29{height:20px;border:solid 1px black;}#a210{height:27px;border:solid 1px black;}
+		         #a211{height:20px;border:solid 1px black;}#a212{height:27px;border:solid 1px black;}
+		         #a213{height:20px;border:solid 1px black;}#a214{height:27px;border:solid 1px black;}
+		         #a215{height:20px;border:solid 1px black;}#a216{height:20px;border:solid 1px black;}
 		 #b1{text-decoration: none;color:black;}
-		 #b3{margin-left: 25px;margin-top:-20px;}
+		 #b3{margin-left:15px;margin-top:-25px;}
 
-		 #A1{float:left;width:49%;height:310px;margin-top:-460px;margin-left:510px;}
-		     #a11{width:70%;height:310px;margin-left:80px;}
+		 #A1{float:left;width:490px;height:250px;margin-top:-440px;margin-left:440px;}
+		     #a11{width:360px;height:250px;}
 		         
 		 
-		 #A3{float:left;border:solid 1px black;width:75%;height:135px;margin-top:-142px;margin-left:275px;border-radius:10px;}
-		     #a31{border:solid 1px black;width:75%;height:135px;border-radius:10px;}
-		     #a32{float:left;border:solid 1px black;width:24%;height:123px;margin-left:755px;margin-top:-130px;}
+		 #A3{float:left;border:solid 1px black;width:757px;height:140px;margin-top:-142px;margin-left:220px;border-radius:10px;}
+		     #a31{border:solid 1px black;width:600px;height:135px;border-radius:10px;font-size: 15px;}
+		     #a32{float:left;border:solid 1px black;width:145px;height:123px;margin-left:605px;margin-top:-130px;}
 </style>
 
 	
 </head>
 <body>
+	<div id="Z">
 <div id="A2">
 	<p><a href="index.html"><input type="button" value="返回首页"  id="b3"></a></p>
 	<table id="a2" background="">
@@ -58,12 +60,13 @@
 </div>	
 <div id="A3">
 	<div id="a31">
-		<p>朱鹮：东方宝石 世界性濒危珍稀鸟类 国家一级保护动物</p>
-		<p>朱鹮与熊猫、羚牛、金丝猴一起并称为四大国宝。浙江是朱鹮的历史分布区，上世纪50年代分别在宁波和瑞安等地所采集的朱鹮标本，现今仍陈列于上海师范大学等单位的博物馆。2008年浙江从陕西引进10只朱鹮，在德清下渚湖开始了人工迁地保护和浙江野外种群重建工程。如今，朱鹮的人工圈养种群数量达222只，列入全国人工圈养种群的前三甲行列。2014年首次放飞朱鹮33只，野外存活率高达96.97%。</p>
+		<p>朱鹮：东方宝石 世界性濒危珍稀鸟类 国家一级保护动物<br>
+		朱鹮与熊猫、羚牛、金丝猴一起并称为四大国宝。浙江是朱鹮的历史分布区，上世纪50年代分别在宁波和瑞安等地所采集的朱鹮标本，现今仍陈列于上海师范大学等单位的博物馆。2008年浙江从陕西引进10只朱鹮，在德清下渚湖开始了人工迁地保护和浙江野外种群重建工程。如今，朱鹮的人工圈养种群数量达222只，列入全国人工圈养种群的前三甲行列。2014年首次放飞朱鹮33只，野外存活率高达96.97%。</p>
 		
 		
 	</div>
 	<div id="a32"><img src="src/t1.jpg" width="100%" height="100%" align="center"></div>
 </div>
+	</div>
 </body>
 </html>
